Adding VueJS and a couple of .gitignore entries.

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "mocha": "^2.3.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "vue": "^1.0.25"
   }
 }
