--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,10 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
+# Ignore JavaScript output directories
+dist
+target
+
 # Emacs ignores
 .projectile
+.jshintrc
