--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "chai": "^3.3.0",
+    "fs-extra": "^0.30.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.7",
     "mocha": "^2.3.3",
+    "string": "^3.3.1",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
