--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
+    "recursive-readdir": "^2.0.0",
     "vue": "^1.0.25"
   }
 }
