--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bluebird": "^3.4.1",
     "recursive-readdir": "^2.0.0",
-    "vue": "^1.0.25"
+    "vue": "^1.0.25",
+    "vue-class-component": "^3.2.0"
   }
 }
