--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   },
   "homepage": "https://github.com/tiagorg/gulp-es6-webpack-example#readme",
   "devDependencies": {
-    "babel-core": "^5.8.25",
+    "babel-core": "^6.10.4",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.3.0",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.3.0",
+    "gulp-babel": "^6.1.2",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.7",
     "mocha": "^2.3.3",
